<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:title="@string/label_menu_home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        tools:iconTint="#F09C00" />
    <item android:title="@string/label_menu_surat"
        android:id="@+id/navigation_letter"
        android:icon="@drawable/ic_letter" />
    <item android:title="@string/label_menu_laporan"
        android:id="@+id/navigation_laporan"
        android:icon="@drawable/ic_lapor" />
    <item android:title="@string/label_menu_darurat"
        android:id="@+id/navigation_emergency"
        android:icon="@drawable/ic_emergency" />
    <item android:title="@string/label_menu_niaga"
        android:id="@+id/navigation_niaga"
        android:icon="@drawable/ic_niaga" />
</menu>