<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_admin"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.akhir.proyek.rukuntetangga.fragments.HomeFragment"
        android:label="@string/label_menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_letter"
        android:name="id.akhir.proyek.rukuntetangga.fragments.admin.LetterFragment"
        android:label="@string/label_menu_surat"
        tools:layout="@layout/fragment_letter" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="id.akhir.proyek.rukuntetangga.fragments.admin.LaporanFragment"
        android:label="@string/label_menu_laporan"
        tools:layout="@layout/fragment_laporan" />

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="id.akhir.proyek.rukuntetangga.fragments.admin.EmergencyFragment"
        android:label="@string/label_menu_darurat"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/navigation_niaga"
        android:name="id.akhir.proyek.rukuntetangga.fragments.NiagaFragment"
        android:label="@string/label_menu_niaga"
        tools:layout="@layout/fragment_niaga" />
</navigation>