<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorSecondary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_service_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_warga_name"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:padding="8dp"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_email"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_phone_number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_no_telephone"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="numberSigned"
                android:padding="8dp"
                tools:ignore="TextFields"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_address"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:padding="8dp"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_birth_place"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_birth_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_birth_place"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:padding="8dp"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_birth_date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_birth_date"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:focusable="false"
                android:drawableRight="@drawable/ic_baseline_arrow_down_24"
                android:drawableEnd="@drawable/ic_baseline_arrow_down_24"
                android:importantForAutofill="no"
                android:padding="8dp"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nik"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_nik"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:inputType="numberSigned"
                android:padding="8dp"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_menu_job"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/et_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_rounded_gray"
                android:hint="@string/hint_job"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pendidikan"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/sp_pendidikan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_religion"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/sp_religion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />


            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_status_married"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="8dp" />

            <Spinner
                android:id="@+id/sp_status_married"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_rounded_gray"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:padding="8dp" />

            <Button
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/edit_text_rounded"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_update_profile"
                app:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>